objects/Opportunity_Information__c.object
<CustomObject>
    <description>According to the main authorisation principles, access to opportunity is set to private. Only the owner and the team members will have access to the opportunities.
To enable transparency, collaboration and cross selling options, this object contains public information of the opportunity.
The Object is set to public read only and gets all fields updated from the belonging opportunity. 
The relationship between opportunity and opportunity information is 1:1</description>
    <fields>
        <fullName>ABB_Industry_Usage_Level1__c</fullName>
        <description>R4.1 - New picklist field created to replace &quot;Industry usage&quot;. 
Picklist containing the Industry Usage level1 Values From Opportunity</description>
        <inlineHelpText>The Industry Usage classification (multi-level) describes the main industrial activity (usage) to which the delivered ABB offering is applied to (or intended to be used).</inlineHelpText>
        <label>Industry Usage Level1</label>
        <picklist>
            <picklistValues>
                <fullName>BLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ABB_Industry_Usage_Level2__c</fullName>
        <description>R4.1 - New dependent picklist field created for Industry usage level 1 to replace &quot;Industry usage&quot; 
Picklist containing the Industry Usage level2 Values From Opportunity</description>
        <inlineHelpText>The Industry Usage classification (multi-level) describes the main industrial activity (usage) to which the delivered ABB offering is applied to (or intended to be used).</inlineHelpText>
        <label>Industry Usage Level2</label>
        <picklist>
            <controllingField>ABB_Industry_Usage_Level1__c</controllingField>
            <picklistValues>
                <fullName>BLD.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT.3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ABB_Industry_Usage_Level3__c</fullName>
        <description>R4.1 - New dependent picklist field created for Industry usage level 2 to replace &quot;Industry usage&quot; 
Picklist containing the Industry Usage level3 Values From Opportunity</description>
        <inlineHelpText>The Industry Usage classification (multi-level) describes the main industrial activity (usage) to which the delivered ABB offering is applied to (or intended to be used).</inlineHelpText>
        <label>Industry Usage Level3</label>
        <picklist>
            <controllingField>ABB_Industry_Usage_Level2__c</controllingField>
            <picklistValues>
                <fullName>BLD.9.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.9.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.9.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.11.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.11.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.14.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.14.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.17.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.17.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.18.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.18.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.2.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.2.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ABB_Location_Bidding_unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of R7B</description>
        <inlineHelpText>Refers to the Sales, Service Project Execution or Manufacturing unit (Business Activity Location – BAL) that will lead the opportunity in terms of final bid preparation towards the customer and that will book the order if ABB receives the award.</inlineHelpText>
        <label>ABB Location - Bidding unit</label>
        <referenceTo>ABB_Location__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>ABB_Location_Bidding_unit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ABB_Sales_Stage__c</fullName>
        <inlineHelpText>Reflects the progress that ABB makes in relation to the customer buying progress to win the opportunity. Is an important element for pipeline management. Selected ABB Sales Stage should not be ahead of customer buying path stage.</inlineHelpText>
        <label>ABB Sales Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Prospecting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity Pursuit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bidding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost (Cancelled)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost Without ABB Bid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Won</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Customer_Country__c</fullName>
        <description>Country of Account Customer</description>
        <formula>TEXT(Account__r.Primary_Address_Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Customer Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Customer_End_User__c</fullName>
        <formula>IF( ISBlank(Opportunity_Name_m__r.Account_End_User__c),
HYPERLINK(&apos;/&apos;+Opportunity_Name_m__r.Account.Id, 
Opportunity_Name_m__r.Account.Name), 
HYPERLINK(&apos;/&apos;+Opportunity_Name_m__r.Account_End_User__c, Opportunity_Name_m__r.Account_End_User__r.Name) )</formula>
        <label>Account Customer / End User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_End_User_Country__c</fullName>
        <description>Country of Account End User</description>
        <formula>TEXT(Account_End_User_m__r.Primary_Address_Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account End User Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_End_User_m__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field from Opportunity: Account_End_User__c</description>
        <inlineHelpText>This Account lookup is used for End User Accounts.</inlineHelpText>
        <label>Account End User</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity (End User)</relationshipLabel>
        <relationshipName>Opportunity_Information1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Field from Opportunity: Account Name</description>
        <label>Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup field to ensure a relation to the correct Account</description>
        <inlineHelpText>This Account lookup is used for Customer Accounts.</inlineHelpText>
        <label>Account Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity (Customer)</relationshipLabel>
        <relationshipName>Opportunity_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>All_Quotes_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>created as part of R5-2504</description>
        <label>All Quotes Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternative_Opportunity_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship to the Main Opportunity</description>
        <inlineHelpText>Substitute of another sale (main) opportunity for a parallel channel, a different solution or different scope addressing same end user demand. Alternative opportunities should not be considered in opportunity pipeline and for forecasting.</inlineHelpText>
        <label>Alternative Opportunity To</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Opportunity.Alternative_Opportunity_To__r.Account_End_User__c</field>
                <operation>equals</operation>
                <valueField>Opportunity.Account_End_User__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Alternative Opportunities</relationshipLabel>
        <relationshipName>Opportunity_Information2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alternative_Opportunity_To_formula__c</fullName>
        <formula>HYPERLINK(&apos;/apex/FindingOpportunityAccessPage?Id=&apos;+Opportunity_Name_m__r.Alternative_Opportunity_To__c, Opportunity_Name_m__r.Alternative_Opportunity_To__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Substitute of another sale (main) opportunity for a parallel channel, a different solution or different scope addressing same end user demand. Alternative opportunities should not be considered in opportunity pipeline and for forecasting.</inlineHelpText>
        <label>Alternative Opportunity To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Backup__c</fullName>
        <description>Backup field to save existing value. STS R3.0</description>
        <inlineHelpText>Backup field to save existing value. STS R3.0</inlineHelpText>
        <label>Application Backup</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>Opportunity field Application__c</description>
        <label>Application</label>
        <picklist>
            <picklistValues>
                <fullName>AP.301</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.302</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.303</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.304</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.305</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.306</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.307</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.308</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.309</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.310</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.311</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.313</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.314</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.315</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.316</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.317</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.318</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.319</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.320</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.321</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.322</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.323</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.324</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.325</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.326</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.327</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.328</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.329</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.330</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.331</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BU_Backup__c</fullName>
        <description>Backup field to save existing value. STS R3.0</description>
        <inlineHelpText>Backup field to save existing value. STS R3.0</inlineHelpText>
        <label>BU Backup</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <description>R4.1 - New picklist field created to replace &quot;Application&quot;. 
Picklist containing active Applications relating to specific Product Groups</description>
        <inlineHelpText>ABB classification of application based on the main process activity of the delivered product, service, solution. The selectable options are product group specific</inlineHelpText>
        <label>Description BU</label>
        <picklist>
            <picklistValues>
                <fullName>ABB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPSB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPSO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAPI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IASC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MODR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAMF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RARO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RASC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZCJV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZCPG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLM_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CLM Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Agreement related Opportunities</relationshipLabel>
        <relationshipName>Opportunity_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Campaign</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capture_Team_Indicator__c</fullName>
        <formula>IF(Or(Opportunity_Name_m__r.Technical_Amount_USD__c &lt;= 5000000,Opportunity_Name_m__r.Target__c = FALSE), IMAGE(&quot;/resource/CaptureTeamNotRequired&quot;,&quot;&quot;,25,75), 
IF(AND( Opportunity_Name_m__r.Technical_Amount_USD__c &gt; 5000000, Opportunity_Name_m__r.Technical_Amount_USD__c &lt;=15000000, Opportunity_Name_m__r.Target__c = TRUE ,Opportunity_Name_m__r.End_User_Project__r.Capture_Team_Count__c &gt; 0), IMAGE(&quot;/resource/CaptureTeam5MCreated&quot;,&quot;&quot;,25,75),
IF(AND(Opportunity_Name_m__r.Technical_Amount_USD__c &gt; 5000000, Opportunity_Name_m__r.Technical_Amount_USD__c &lt;=15000000, Opportunity_Name_m__r.Target__c = TRUE , Opportunity_Name_m__r.End_User_Project__c = NULL), IMAGE(&quot;/resource/CaptureTeam5MOpen&quot;,&quot;&quot;,25,75),
IF(AND(Opportunity_Name_m__r.Technical_Amount_USD__c &gt; 5000000, Opportunity_Name_m__r.Technical_Amount_USD__c &lt;=15000000, Opportunity_Name_m__r.Target__c = TRUE , Opportunity_Name_m__r.End_User_Project__r.Capture_Team_Count__c = 0), IMAGE(&quot;/resource/CaptureTeam5MOpen&quot;,&quot;&quot;,25,75),
IF(AND( Opportunity_Name_m__r.Technical_Amount_USD__c &gt; 15000000, Opportunity_Name_m__r.Target__c = TRUE , Opportunity_Name_m__r.End_User_Project__r.Capture_Team_Count__c &gt; 0), IMAGE(&quot;/resource/CaptureTeam15MCreated&quot;,&quot;&quot;,25,75),
IF(AND( Opportunity_Name_m__r.Technical_Amount_USD__c &gt; 15000000, Opportunity_Name_m__r.Target__c = TRUE , Opportunity_Name_m__r.End_User_Project__c = NULL), IMAGE(&quot;/resource/CaptureTeam15MOpen&quot;,&quot;&quot;,25,75),
IF(AND( Opportunity_Name_m__r.Technical_Amount_USD__c &gt; 15000000, Opportunity_Name_m__r.Target__c = TRUE , Opportunity_Name_m__r.End_User_Project__r.Capture_Team_Count__c = 0), 
IMAGE(&quot;/resource/CaptureTeam15MOpen&quot;,&quot;&quot;,25,75),&apos;&apos;))))) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capture Team Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capture_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of R5-2507. To associate the opportunity directly to the Capture Team.</description>
        <label>Capture Team</label>
        <referenceTo>Capture_Team__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunity_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunity_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Class_Level1_Backup__c</fullName>
        <description>Backup field to save existing value. STS R3.0</description>
        <inlineHelpText>Backup field to save existing value. STS R3.0</inlineHelpText>
        <label>Channel Class Level1 Backup</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Class_Level1__c</fullName>
        <description>R4.1 - New picklist field created to replace &quot;Channel class&quot; 
Picklist containing the values for differing ABB Channel Class.</description>
        <inlineHelpText>Channel classification of the Opportunity.</inlineHelpText>
        <label>Channel Class Level1</label>
        <picklist>
            <picklistValues>
                <fullName>ABBINT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYIN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Class_Level2_Backup__c</fullName>
        <description>Backup field to save existing value. STS R3.0</description>
        <inlineHelpText>Backup field to save existing value. STS R3.0</inlineHelpText>
        <label>Channel Class Level2 Backup</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Class_Level2__c</fullName>
        <description>R4.1 - New dependent picklist field created for Channel Class Level1. 
Picklist containing the values for differing ABB Channel Class.</description>
        <inlineHelpText>Channel Classification for Level 2 of Opportunity is Optional</inlineHelpText>
        <label>Channel Class Level2</label>
        <picklist>
            <controllingField>Channel_Class_Level1__c</controllingField>
            <picklistValues>
                <fullName>ABBPRD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABBSYI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECOM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBDIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OCON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYINBI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYINLB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYINMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDIS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consortium__c</fullName>
        <description>R5</description>
        <label>Consortium</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunity_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Buying_Path__c</fullName>
        <inlineHelpText>Reflects in which stage customer is in buying process. Indication of criteria is given on the &quot;Customer Buying Path&quot; chevron upon hover over.</inlineHelpText>
        <label>Customer Buying Path</label>
        <picklist>
            <picklistValues>
                <fullName>Awareness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Explore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tendering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buying</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_User_Project_Site_Country_m__c</fullName>
        <description>Field from Opportunity: End_User_Project_Site_Country</description>
        <label>End User Project Site Country</label>
        <picklist>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>